Expend test coverage